--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".PaymentActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
@@ -79,25 +80,55 @@
         android:layout_gravity="center"
         android:orientation="vertical"
         android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_marginTop="10sp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:gravity="center"
+                android:text="Địa chỉ"
+                android:textColor="#202020" />
+
+            <EditText
+                android:id="@+id/editText_payment_address"
+                android:layout_width="350sp"
+                android:layout_height="50sp"
+                android:layout_marginTop="2sp"
+                android:autofillHints="postalAddress"
+                android:background="@drawable/bg_edit_text"
+                android:hint="Hồ Chí Minh"
+                android:inputType="text"
+                android:maxLines="1"
+                android:paddingStart="10sp"
+                android:paddingEnd="0sp" />
+        </LinearLayout>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Địa chỉ"
-            android:textColor="#202020"
             android:layout_gravity="start"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:text="Tổng tiền"
+            android:textColor="#202020" />
+
         <EditText
-            android:id="@+id/editText_payment_address"
-            android:autofillHints="postalAddress"
-            android:inputType="text"
+            android:id="@+id/editText_payment_MoneySum"
             android:layout_width="350sp"
             android:layout_height="50sp"
-            android:maxLines="1"
+            android:layout_marginTop="2sp"
+            android:autofillHints="postalAddress"
             android:background="@drawable/bg_edit_text"
-            android:hint="Hồ Chí Minh"
+            android:inputType="text"
+            android:maxLines="1"
             android:paddingStart="10sp"
-            android:paddingEnd="0sp"
-            android:layout_marginTop="2sp"/>
+            android:paddingEnd="0sp" />
     </LinearLayout>
     <Button
         android:id="@+id/btnThanhToanThanhToan"
@@ -108,4 +139,14 @@
         android:textColor="@color/white"
         android:text="THANH TOÁN"
         android:layout_height="wrap_content"/>
+
+    <Button
+        android:id="@+id/btnThanhToanHuyBo"
+        android:layout_width="350sp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="17sp"
+        android:background="@drawable/bg_box_rounded"
+        android:text="HỦY"
+        android:textColor="@color/white" />
 </LinearLayout>
