--- a/app/src/main/res/layout/order_card.xml
+++ b/app/src/main/res/layout/order_card.xml
@@ -24,38 +24,43 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center_vertical">
+
             <TextView
                 android:id="@+id/tvDateMakeOrder"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="example_date"
                 android:layout_gravity="center_vertical"
-                android:textColor="@color/white"/>
+                android:text="example_date"
+                android:textColor="@color/white" />
+
             <TextView
                 android:id="@+id/tvOrderPrice"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
                 android:text="@string/money_text"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/tvOrderAddress"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/address"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white" />
+
             <TextView
                 android:id="@+id/tvOrderStatus"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="status"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white" />
         </LinearLayout>
+
         <Button
             android:id="@+id/btnConfirmOrder"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:textSize="14sp"
-            android:text="Hoàn thành"/>
+            android:text="Hoàn thành"
+            android:textSize="11sp" />
     </LinearLayout>
 </LinearLayout>
